--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "firebase": "^11.0.2",
     "json-to-scss": "^1.6.2",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
